# tracking

./: .gitignore  CMakeLists.txt  README.md
ext/cloudproc/: CMakeLists.txt  cloudgrabber.hpp  cloudproc.hpp  cloudprocpy.cpp  convexdecomp.hpp  gen_instantiations.py  hacd_interface.hpp  macros.h  mesh_simplification.cpp  mesh_simplification.hpp  sphere_sampling.hpp
scripts/: recorder.py  test_cloth.py  test_tracking.py  tracker.py
src/: CMakeLists.txt  cloth.cpp  cloth.hpp  macros.hpp  mass_system.cpp  mass_system.hpp  npeigen.cpp  npeigen.hpp  python_interface.cpp  test_cloth.py  test_npeigen.cpp  test_tracking.py
trackingpy/: __init__.py  cloth.py  clouds.py  miniviewer.py  model.py  tracking.py  tracking_gpu.py
